# AI-Project-Initiator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SKILL.md  pyproject.toml  requirements.txt
docs/: WORKFLOW.md
docs/editor-configs/.trae/: rules.yaml
docs/guides/: best-practices.md  getting-started.md
docs/templates/: MVP-template.md  PRD-template.md  ROADMAP-template.md
presets/: README.md  full-stack.yaml  minimal.yaml  professional.yaml
scripts/: README.md  setup.bat  setup.sh  validate.py
skills/: README.md
skills/core/project-init/: SKILL.md
skills/curated/doc-coauthor/: SKILL.md
skills/curated/web-build/: SKILL.md
skills/extensions/collaboration/: README.md
skills/extensions/delivery/: README.md
skills/extensions/delivery/pdf/: SKILL.md
skills/extensions/delivery/sheets/: SKILL.md
skills/extensions/delivery/sheets/scripts/: recalc.py
skills/extensions/delivery/slides/scripts/: thumbnail.py
skills/extensions/delivery/word/scripts/: accept_changes.py
skills/extensions/development/: README.md
skills/extensions/development/ux-kit/: SKILL.md
skills/extensions/development/web-test/: SKILL.md
skills/extensions/planning/: README.md
skills/extensions/planning/pm-kit/: SKILL.md
skills/optional/slides/: SKILL.md
skills/optional/word/: SKILL.md
skills/shared/: README.md  __init__.py
skills/shared/office/: __init__.py
